--- a/app/src/main/res/layout/activity_cardview_a2_h.xml
+++ b/app/src/main/res/layout/activity_cardview_a2_h.xml
@@ -6,7 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".cardviewA2H">
 
-    <SeekBar
+    <com.google.android.material.slider.Slider
+        android:id="@+id/slider"
+        android:valueFrom="0.0"
+        android:valueTo="3.0"
+        app:labelBehavior="gone"
+        android:stepSize="1.0"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/viewPager"
